objects/LLC_BI__LoanRenewal__c.object
<CustomObject>
    <description>This junction object connects a base loan with its renewal versions</description>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <description>Custom field to designate source Credit Union of object used by nCino Data Services.</description>
        <label>Integration Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ClonedFromLoanName__c</fullName>
        <description>This field is automatically populated when a loan renewal/ modification is created. This is the name of the loan that the renewal was created from, linking the history of renewals/ modifications on the loan records.</description>
        <label>Cloned From Loan Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DeletedLoanName__c</fullName>
        <description>This field holds the name of the loan when it is deleted for history display purposes.</description>
        <label>DeletedLoanName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HasActiveRenewalLoan__c</fullName>
        <description>Flag indicating whether or not this record relates to an active renewal loan. This field is automatically set by the system. It is used behind the scenes to set the appropriate appendages during the renewal and modification process.</description>
        <formula>IF( ISBLANK(  LLC_BI__DeletedLoanName__c ) &amp;&amp; LLC_BI__RevisionNumber__c &gt; 0 &amp;&amp; (LLC_BI__RevisionStatus__c != &apos;Withdrawn&apos;) &amp;&amp; (LLC_BI__RevisionStatus__c != &apos;Declined&apos;) &amp;&amp; (LLC_BI__Is_No_Action_Placeholder__c != true), True, False )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Active Renewal Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_No_Action_Placeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This boolean field is automatically set by the system. When true, it indicates that the record is a link from a No Action Loan to its placeholder in its original hierarchy. The default value is false.</description>
        <label>Is No Action Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NextRevisionNumber__c</fullName>
        <description>This value holds the next revision number in the linked list. This field is automatically set by the system. It is used behind the scenes to set the appropriate appendages during the renewal and modification process.</description>
        <label>Next Revision Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Original_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field with the original parent loan or it is set to null if no parent exists when a loan renewal is created for an action. By default, it is null.</description>
        <label>Original Parent</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Original Parent Loan</relationshipLabel>
        <relationshipName>OriginalParentLoan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Original_Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field to track what product package the loan originated from. By default, it is null</description>
        <label>Original Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Original Product Package</relationshipLabel>
        <relationshipName>OriginalProductPackage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ParentLoanId__c</fullName>
        <description>This field is automatically set and is required. It specifies the Parent Loan Master- Detail relationship, allowing the linking of history of renewals and modifications on the loan records.</description>
        <label>Parent Loan Id</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipName>RenewalJunction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__PreviousRevisionNumber__c</fullName>
        <description>This holds the previous revision number for the linked list of revisions. This field is automatically set by the system.  It is used behind the scenes to set the appropriate appendages during the renewal and modification process.</description>
        <label>Previous Revision Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__PreviousVersionStage__c</fullName>
        <description>The stage that the prior revision was in when this renewal was created. This field is automatically set by the system. It is used behind the scenes to set the appropriate appendages during the renewal and modification process.</description>
        <label>Previous Version Stage</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__PreviousVersionStatus__c</fullName>
        <description>This holds the status that the previous version was in before this renewal was created. This field is automatically set by the system. It is used behind the scenes to set the appropriate appendages during the renewal and modification process.</description>
        <label>Previous Version Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RenewalLoanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field references the ID of the loan renewal record. It is automatically populated when renewal records are created.</description>
        <label>Renewal Loan Id</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipName>RenewalJunctionObject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RevisionNumber__c</fullName>
        <description>This value holds the revision number for the child object. This field is automatically  set by the system.  It is used behind the scenes to set the appropriate appendages during the renewal and modification process.</description>
        <label>Revision Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RevisionStatus__c</fullName>
        <defaultValue>&quot;AVAILABLE&quot;</defaultValue>
        <description>This holds the current status of this revision. This field is automatically set by the system. It is used behind the scenes to set the appropriate appendages during the renewal and modification process.</description>
        <label>Revision Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RootLoanId__c</fullName>
        <description>This field holds the ID of the Loan object that is at the root of the tree. If this is the root object, this field will be null. This field is automatically  set by the system.  It is used behind the scenes to set the appropriate appendages during the renewal and modification process.</description>
        <label>Root Loan ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Number_Of_Extended_Days__c</fullName>
        <description>The system automatically populates this field to track the total number of days of the parent (booked) loan.</description>
        <label>Total Number of Extended Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The loan number is an external, unique key for this Loan Renewal. This field is used when syncing nCino with the financial institution&apos;s core.</description>
        <externalId>true</externalId>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>Custom Migration ID for LoanRenewal object used by nCino Data Services.</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>LoanRenewal</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RL-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LoanRenewals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>